--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "main": "checkPlanExpiry.js",
   "dependencies": {
-    "node-appwrite": "^12.0.0"
+    "node-appwrite": "12.0.0"
   }
 }
